--- a/razorPagesEgitim/Areas/Identity/Pages/Account/Register.cshtml
+++ b/razorPagesEgitim/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @model RegisterModel
+@using razorPagesEgitim.Utility 
 @{
     ViewData["Title"] = "Register";
 }
@@ -108,6 +109,20 @@
                     <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                 </div>
             </div>
+            @if (User.IsInRole(StatikRoller.AdminKullanici))
+            {
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-4">
+                            <label for="admin" class="form-label">Admin:</label>
+                            @*<label asp-for="Input.ConfirmPassword" class="form-label"></label>*@
+                        </div>
+                        <div class="col-8">
+                            <input id="admin" class="form-check" asp-for="Input.Admin" />
+                        </div>
+                    </div>
+                </div>
+            }
             <div class="row">
                 <div class="col-8 offset-4">
                     <button style="width:100%;" type="submit" class="btn btn-primary">Kayıt Ol</button>
