--- a/razorPagesEgitim/Pages/Kullanicilar/Edit.cshtml
+++ b/razorPagesEgitim/Pages/Kullanicilar/Edit.cshtml
@@ -5,7 +5,7 @@
 }
 
 <br />
-<h2 class="text-info">Kullanıcı Düzenle</h2>
+<h2 class="text-light">Kullanıcı Düzenle</h2>
 <br />
 
 <form method="post">
