--- a/razorPagesEgitim/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/razorPagesEgitim/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -1,29 +1,112 @@
 ﻿@page
 @model ExternalLoginModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Kayıt";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h4 id="external-login-title">Associate your @Model.ProviderDisplayName account.</h4>
+<h2 class="text-light">@ViewData["Title"]</h2>
+<h4 class="text-light">@Model.ProviderDisplayName hesabı ile giriş.</h4>
 <hr />
 
-<p id="external-login-description" class="text-info">
-    You've successfully authenticated with <strong>@Model.ProviderDisplayName</strong>.
-    Please enter an email address for this site below and click the Register button to finish
-    logging in.
+<p id="external-login-description" class="text-light">
+     <strong>@Model.ProviderDisplayName</strong>.
+    hesabı ile başarılı giriş yaptınız.
+    Lütfen aşağıdaki bilgileri doldurunuz ve kayıt işleminizi tamamlayınız
 </p>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12 backgroundwhite border">
         <form asp-page-handler="Confirmation" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+                <div class="row">
+                    <div class="col-2">
+                        <label for="adSoyad" class="form-label">Ad-Soyad:</label>
+                        @*<label asp-for="Input.adSoyad" class="form-label"></label>*@
+                    </div>
+                    <div class="col-5">
+                        <input id="adSoyad" asp-for="Input.AdSoyad" class="form-control" />
+                    </div>
+                    <span asp-validation-for="Input.AdSoyad" class="text-danger"></span>
+                </div>
             </div>
-            <button type="submit" class="btn btn-primary">Register</button>
+            <div class="form-group">
+                <div class="row">
+                    <div class="col-2">
+                        <label for="email" class="form-label">Email:</label>
+                        @*<label asp-for="Input.Email" class="form-label"></label>*@
+                    </div>
+                    <div class="col-5">
+                        <input asp-for="Input.Email" class="form-control" />
+                    </div>
+                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="row">
+                    <div class="col-2">
+                        <label for="telefon" class="form-label">Telefon:</label>
+                        @*<label asp-for="Input.PhoneNumber" class="form-label"></label>*@
+                    </div>
+                    <div class="col-5">
+                        <input id="telefon" asp-for="Input.PhoneNumber" class="form-control" />
+                    </div>
+                    <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="row">
+                    <div class="col-2">
+                        <label for="adres" class="form-label">Adres:</label>
+                        @*<label asp-for="Input.adres" class="form-label"></label>*@
+                    </div>
+                    <div class="col-5">
+                        <textarea id="adres" asp-for="Input.Adres" class="form-control" cols="10" rows="7"></textarea>
+                    </div>
+                    <span asp-validation-for="Input.Adres" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="row">
+                    <div class="col-2">
+                        <label for="sehir" class="form-label">Şehir:</label>
+                        @*<label asp-for="Input.sehir" class="form-label"></label>*@
+                    </div>
+                    <div class="col-5">
+                        <input id="sehir" asp-for="Input.Sehir" class="form-control" />
+                    </div>
+                    <span asp-validation-for="Input.Sehir" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="row">
+                    <div class="col-2">
+                        <label for="postaKodu" class="form-label">Posta Kodu:</label>
+                        @*<label asp-for="Input.postaKodu" class="form-label"></label>*@
+                    </div>
+                    <div class="col-5">
+                        <input id="postaKodu" asp-for="Input.PostaKodu" class="form-control" />
+                    </div>
+                    <span asp-validation-for="Input.PostaKodu" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-5 offset-2">
+                    <button style="width:100%;" type="submit" class="btn btn-primary">Kayıt Ol</button>
+                </div>
+            </div>
+
+
+
+
+
+
+            @*<div class="form-group">
+            <label asp-for="Input.Email"></label>
+            <input asp-for="Input.Email" class="form-control" />
+            <span asp-validation-for="Input.Email" class="text-danger"></span>
+        </div>
+        <button type="submit" class="btn btn-primary">Register</button>*@
         </form>
     </div>
 </div>
