--- a/razorPagesEgitim/Pages/Kullanicilar/Index.cshtml
+++ b/razorPagesEgitim/Pages/Kullanicilar/Index.cshtml
@@ -50,6 +50,7 @@
                                 @Html.DisplayNameFor(a => a.UsersListViewModel.ApplicationUserList[0].Email)
                             </th>
                             <th></th>
+                            <th></th>
                         </tr>
                         @foreach (var item in Model.UsersListViewModel.ApplicationUserList)
                         {
@@ -62,6 +63,11 @@
                                 </td>
                                 <td>
                                     @Html.DisplayFor(m => item.Email)
+                                </td>
+                                <td>
+                                    <a asp-page="../Makinalar/Index" asp-route-KullaniciId="@item.Id" style="text-decoration:none;">
+                                        <img src="~/images/cncMachine.png" width="40"/>&nbsp; Makinaları Göster
+                                    </a>
                                 </td>
                                 <td>
                                     <div class="btn-group" role="group">
