--- a/razorPagesEgitim/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/razorPagesEgitim/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -10,17 +10,41 @@
 <div class="row">
     <div class="col-md-6">
         <form id="profile-form" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div asp-validation-summary="All" class="text-danger"></div>
+            <input asp-for="Input.Email" type="hidden" />
             <div class="form-group">
-                <label asp-for="Username"></label>
-                <input asp-for="Username" class="form-control" disabled />
+                <label asp-for="Input.Email"></label>
+                <div class="input-group">
+                    <input asp-for="Input.Email" readonly class="form-control" />
+                    <span class="input-group-append" aria-hidden="true"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Input.AdSoyad" class="col-form-label"></label>
+                    <input asp-for="Input.AdSoyad" class="form-control" />
+                    <span asp-validation-for="Input.AdSoyad" class="bg-danger text-light"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Input.Adres" class="col-form-label"></label>
+                    <input asp-for="Input.Adres" class="form-control" />
+                    <span asp-validation-for="Input.Adres" class="bg-danger text-light"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Input.Sehir" class="col-form-label"></label>
+                    <input asp-for="Input.Sehir" class="form-control" />
+                    <span asp-validation-for="Input.Sehir" class="bg-danger text-light"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Input.PostaKodu" class="col-form-label"></label>
+                    <input asp-for="Input.PostaKodu" class="form-control" />
+                    <span asp-validation-for="Input.PostaKodu" class="bg-danger text-light"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Input.PhoneNumber" class="col-form-label"></label>
+                    <input asp-for="Input.PhoneNumber" class="form-control" />
+                    <span asp-validation-for="Input.PhoneNumber" class="bg-danger text-light"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Input.PhoneNumber"></label>
-                <input asp-for="Input.PhoneNumber" class="form-control" />
-                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
-            </div>
-            <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
+            <button id="update-profile-button" type="submit" class="btn btn-info form-control">Kaydet</button>
         </form>
     </div>
 </div>
