--- a/razorPagesEgitim/Pages/Shared/_LoginPartial.cshtml
+++ b/razorPagesEgitim/Pages/Shared/_LoginPartial.cshtml
@@ -6,7 +6,7 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a  class="nav-link text-info" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Merhaba @User.Identity.Name!</a>
+        <a  class="nav-link text-info" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@await Component.InvokeAsync("KullaniciAdi")</a><!-- Kullanıcı adını componentten çektik -->
     </li>
     <li class="nav-item">
         <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post" >
