--- a/razorPagesEgitim/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/razorPagesEgitim/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -10,10 +10,10 @@
 }
 
 <div class="container backgroundwhite">
-    <h2>Manage your account</h2>
+    <h2>Hesabınızı yönetin</h2>
 
     <div>
-        <h4>Change your account settings</h4>
+        <h4>Hesap ayarlarınızı değiştirin</h4>
         <hr />
         <div class="row">
             <div class="col-md-3">
