--- a/razorPagesEgitim/Areas/Identity/Pages/Account/Register.cshtml
+++ b/razorPagesEgitim/Areas/Identity/Pages/Account/Register.cshtml
@@ -2,7 +2,7 @@
 @model RegisterModel
 @using razorPagesEgitim.Utility 
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Kayıt";
 }
 
 <br />
