--- a/razorPagesEgitim/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
+++ b/razorPagesEgitim/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ConfirmEmailChangeModel
 @{
-    ViewData["Title"] = "Confirm email change";
+    ViewData["Title"] = "Email Değişimi Doğrula";
 }
 
 <h1>@ViewData["Title"]</h1>
