--- a/razorPagesEgitim/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/razorPagesEgitim/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
 @model ForgotPasswordConfirmation
 @{
-    ViewData["Title"] = "Forgot password confirmation";
+    ViewData["Title"] = "Şifremi unuttum doğrulama";
 }
 
 <h1>@ViewData["Title"]</h1>
 <p>
-    Please check your email to reset your password.
+   Şifrenizi sıfırlamak için lütfen email adresinizi kontrol ediniz!
 </p>
 
