--- a/razorPagesEgitim/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
+++ b/razorPagesEgitim/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model LoginWith2faModel
 @{
-    ViewData["Title"] = "Two-factor authentication";
+    ViewData["Title"] = "İkili doğrulama";
 }
 
 <h1>@ViewData["Title"]</h1>
