--- a/razorPagesEgitim/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/razorPagesEgitim/Areas/Identity/Pages/Account/Logout.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model LogoutModel
 @{
-    ViewData["Title"] = "Log out";
+    ViewData["Title"] = "Çıkış";
 }
 
 <header>
@@ -15,7 +15,7 @@
         }
         else
         {
-            <p>You have successfully logged out of the application.</p>
+            <p>Başarılı bir şekilde çıkış yaptınız.</p>
         }
     }
 </header>
