--- a/razorPagesEgitim/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
+++ b/razorPagesEgitim/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ExternalLoginsModel
 @{
-    ViewData["Title"] = "Manage your external logins";
+    ViewData["Title"] = "Harici giriş ayarlarınızı yönetin";
     ViewData["ActivePage"] = ManageNavPages.ExternalLogins;
 }
 
